Added confirmation page and fixed small bugs/errors

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -69,7 +69,7 @@
     </div>
     <!--Created a copright line in the footer-->
     <footer>
-      <%= new Date().getFullYear() %> © SUPERMEETS. All rights reserved.
+      © <%= new Date().getFullYear() %> SUPERMEETS. All rights reserved.
     </footer>
    </form>
   </body>
