--- a/views/create-meet.ejs
+++ b/views/create-meet.ejs
@@ -87,7 +87,7 @@
 
     <!--Created a copright line in the footer-->
     <footer>
-      <%= new Date().getFullYear() %> © SUPERMEETS. All rights reserved.
+      © <%= new Date().getFullYear() %> SUPERMEETS. All rights reserved.
     </footer>
   </body>
 </html>
