Remove nested repository SuperMeets from tracking/ did alot just to figure out how to push new code to git hub / added confirmation page

--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -32,6 +32,7 @@
     </header>
 
     <!--Main content (The center form)-->
+    <!--Added confirmation page and text for submission-->
     <div id="main">
       <form id="car" method="POST" action="/submit">
         <div id="confirm">
